--- a/4-Advanced Topics/labs/fortune-teller-demo/config-server.json
+++ b/4-Advanced Topics/labs/fortune-teller-demo/config-server.json
@@ -1,5 +1,6 @@
 {
-    "git" : { 
-        "uri": "https://github.com/mwright-pivotal/config-repo-1"
+    "git" : {
+	"searchPaths": "4-Advanced Topics/labs/fortune-teller-demo/configuration",
+	"uri": "https://github.com/Pivotal-Field-Engineering/DevNexus2017.git" 
     }
 }
