--- a/4-Advanced Topics/labs/fortune-teller-demo/fortune-teller-ui/src/main/resources/application.yml
+++ b/4-Advanced Topics/labs/fortune-teller-demo/fortune-teller-ui/src/main/resources/application.yml
@@ -1,19 +1,12 @@
-server:
-  port: 8081
-
-eureka:
-  client:
-    registryFetchIntervalSeconds: 5
-
 ribbon:
   IsSecure: false
 
-fortunes:
-  ribbon:
-    ServerListRefreshInterval: 5000
-
 security:
   basic:
+    enabled: false
+
+management:
+  security:
     enabled: false
 
 ---
