add push commands for docker powerball service

--- a/4-Advanced Topics/labs/fortune-teller-demo/fortune-gapowerball/pom.xml
+++ b/4-Advanced Topics/labs/fortune-teller-demo/fortune-gapowerball/pom.xml
@@ -105,6 +105,7 @@
 							<include>${project.build.finalName}.jar</include>
 						</resource>
 					</resources>
+					<useConfigFile>true</useConfigFile>
 				</configuration>
 			</plugin>
 		</plugins>
