--- a/4-Advanced Topics/labs/fortune-teller-demo/fortune-gapowerball/src/main/resources/bootstrap.yml
+++ b/4-Advanced Topics/labs/fortune-teller-demo/fortune-gapowerball/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     name: powerball
   cloud:
     config:
-      uri: ${vcap.services.config-service.credentials.uri:http://localhost:8888}
+      uri: ${vcap.services.config-service-poly.credentials.uri:http://localhost:8888}
