--- a/4-Advanced Topics/labs/fortune-teller-demo/fortune-gapowerball/src/main/resources/bootstrap.yml
+++ b/4-Advanced Topics/labs/fortune-teller-demo/fortune-gapowerball/src/main/resources/bootstrap.yml
@@ -1,6 +1,3 @@
-spring:
-  application:
-    name: powerball
-  cloud:
-    config:
-      uri: ${vcap.services.config-service-poly.credentials.uri:http://localhost:8888}
+  spring:
+    application:
+      name: powerball-docker
