point config to a different repo

--- a/4-Advanced Topics/Demo/fortune-teller-demo/config-server.json
+++ b/4-Advanced Topics/Demo/fortune-teller-demo/config-server.json
@@ -1,6 +1,5 @@
 {
-    "git" : { 
-        "uri": "https://github.com/Pivotal-Field-Engineering/DevNexus2017",
-	"searchPaths": "sample-apps/configuration"
+    "git": { 
+        "uri": "https://github.com/mwright-pivotal/devnexus-config"
     }
 }
